array of leds as brush

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
-    "aframe-tooltip-component": "^0.1.0",
-    "super-hands": "^3.0.0"
+    "aframe-tooltip-component": "^0.1.0"
   }
 }
